# JustParse

./: JustParse.cabal  README.md  laws.md  ticket  ticket.hs
src/Data/: JustParse.hs
src/Data/JustParse/: .Internal.hs.swp  Char.hs  Combinator.hs  Common.hs  Internal.hs  Language.hs  Numeric.hs  Prim.hs  Regex.hs
src/JustParse/: Base.hs  Common.hs  Internal.hs
