name:                JustParse
version:             2.0
synopsis:            A simple and comprehensive Haskell parsing library
description:         A simple and comprehensive Haskell parsing library
homepage:            https://github.com/grantslatton/JustParse
license:             PublicDomain
license-file:        LICENSE
author:              Grant Slatton
maintainer:          grantslatton@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
    exposed-modules: Data.JustParse
    other-modules: 
        Data.JustParse.Internal, 
        Data.JustParse.Combinator,
        Data.JustParse.Numeric,
        Data.JustParse.Language,
        Data.JustParse.Char
    build-depends:
        base
    hs-source-dirs: src
    extensions: MultiParamTypeClasses, Rank2Types, FlexibleInstances, FlexibleContexts
    ghc-options: -O2
