name:                JustParse
version:             3.0.0
synopsis:            A simple and comprehensive Haskell parsing library
description:         A simple and comprehensive Haskell parsing library
homepage:            https://github.com/grantslatton/JustParse
license:             PublicDomain
license-file:        LICENSE
author:              Grant Slatton
maintainer:          grantslatton@gmail.com
-- copyright:           
category:            Text
build-type:          Simple
cabal-version:       >=1.8

library
    exposed-modules: 
        Data.JustParse,
        Data.JustParse.Combinator,
        Data.JustParse.Numeric,
        Data.JustParse.Language,
        Data.JustParse.Char
    other-modules: 
        Data.JustParse.Internal
    build-depends:
        base >= 4.2 && < 5
    hs-source-dirs: src
    extensions: MultiParamTypeClasses, FlexibleInstances, FlexibleContexts, TupleSections, UndecidableInstances, Safe
    ghc-options: -O2 -Wall -fno-warn-unused-do-bind
